Basic content in place.

--- a/site/layouts/page/single.html
+++ b/site/layouts/page/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="pa3 pa5-ns tl">
+<article class="pa3 pa5-ns tl f4">
     <div class="measure lh-copy">
         {{ .Content }}
     </div>
