--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,7 +1,20 @@
 {{ define "main" }}
-<article class="pa3 pa5-ns tl">
-    <div class="measure lh-copy">
-        {{ .Content }}
+<div class="indexWrap pa3 pa5-ns flex flex-wrap justify-start">
+    <article class=" tl f4">
+        <div class="measure lh-copy">
+            {{ .Content }}
+        </div>
+    </article>
+    <div class="cf ph3 ph5-l pv3 pv4-l f4 measure-wide lh-copy mid-gray">
+        <iframe src="//eventbrite.com/tickets-external?eid=14917118503&ref=etckt" frameborder="0" height="450"
+                width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto"
+                allowtransparency="true"></iframe>
+        <div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;">
+            <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell
+                Tickets</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;"
+                                                                        target="_blank"
+                                                                        href="http://www.eventbrite.com?ref=etckt">Eventbrite</a>
+        </div>
     </div>
-</article>
+</div>
 {{end}}
