--- a/src/css/main.css
+++ b/src/css/main.css
@@ -127,9 +127,15 @@ h1, h2, h3 {
 }
 
 .site-header {
-    background-color: #E7040F;
-    min-height: 35rem;
+    background-color: #FF4136;
+    min-height: 35vh;
     background-position: center top;
+}
+
+@media (min-width: 60em) {
+    .site-header {
+        min-height: 35rem;
+    }
 }
 
 @supports (background-blend-mode: lighten) {
@@ -139,7 +145,50 @@ h1, h2, h3 {
     }
 }
 
+.site-header .navWrap::before {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    content: "";
+    display: block;
+    z-index: 0;
+    background-color: color(#FF4136 lightness(+10%));
+    opacity: 0.65;
+}
+
+.site-header nav {
+    position: relative;
+    z-index: 10;
+}
+
+@media (min-width: 60em) {
+    .site-header nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .site-header a.page-home {
+        margin-right: auto;
+    }
+}
+
+.site-header nav a {
+    display: inline-block;
+    padding-bottom: 2px;
+}
+
+.site-header nav a.active {
+    border-bottom: 1px solid white;
+}
+
 .site-header h1 {
     width: 13em;
     max-width: 100%;
+}
+
+a {
+    color: #FF4136;
 }
