--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -7,6 +7,7 @@
     <title>{{ $.Site.Title }}</title>
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css"/>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
   <body>
 
