--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -7,15 +7,9 @@
     </article>
     
     <div class="cf ph3 ph5-l pv3 pv4-l f4 measure-wide lh-copy mid-gray">
-        <iframe src="//eventbrite.com/tickets-external?eid=14917118503&ref=etckt" frameborder="0" height="450"
-                width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto"
-                allowtransparency="true"></iframe>
-        <div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;">
-            <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell
-                Tickets</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;"
-                                                                        target="_blank"
-                                                                        href="http://www.eventbrite.com?ref=etckt">Eventbrite</a>
-        </div>
+        
+                  <div class="afton-tickets-widget" data-group-id="el95nwm92v" data-corner-type="curved"  data-primary-color="#6D51FF" data-secondary-color="#41D96A" data-buy-btn-text="Buy Tickets"></div> 
+                  <script>(function (a, f, t, o, n, js, fjs) {a[o] = a[o] || function () { (a[o].q = a[o].q || []).push(arguments) };js = f.createElement(t), fjs = f.getElementsByTagName(t)[0];js.id = o; js.src = n; js.async = 1; fjs.parentNode.insertBefore(js, fjs);}(window, document, 'script', '_aft', 'https://cdn1.aftontickets.com/js/embedded-checkout/widget.js?v=1747959058820'));_aft('init', { apiKey: 'null', debug: false });</script>
         </div>
        
 </div>
