change widget theme

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -7,10 +7,9 @@
     </article>
     
     <div class="cf ph3 ph5-l pv3 pv4-l f4 measure-wide lh-copy mid-gray">
-
-                  <div class="afton-tickets-widget" data-group-id="el95nwm92v" data-corner-type="curved"  data-primary-color="#6D51FF" data-secondary-color="#41D96A" data-buy-btn-text="Buy Tickets"></div> 
-                  <script>(function (a, f, t, o, n, js, fjs) {a[o] = a[o] || function () { (a[o].q = a[o].q || []).push(arguments) };js = f.createElement(t), fjs = f.getElementsByTagName(t)[0];js.id = o; js.src = n; js.async = 1; fjs.parentNode.insertBefore(js, fjs);}(window, document, 'script', '_aft', 'https://cdn1.aftontickets.com/js/embedded-checkout/widget.js?v=1747960120851'));_aft('init', { apiKey: '5f27c86b697062f1d52f880657faf4fd', debug: false });</script>
-        </div>
+      <div class="afton-tickets-widget" data-group-id="el95nwm92v" data-corner-type="curved"  data-primary-color="#FF4136" data-secondary-color="#eba227" data-buy-btn-text="Buy Tickets"></div> 
+      <script>(function (a, f, t, o, n, js, fjs) {a[o] = a[o] || function () { (a[o].q = a[o].q || []).push(arguments) };js = f.createElement(t), fjs = f.getElementsByTagName(t)[0];js.id = o; js.src = n; js.async = 1; fjs.parentNode.insertBefore(js, fjs);}(window, document, 'script', '_aft', 'https://cdn1.aftontickets.com/js/embedded-checkout/widget.js?v=1747960376925'));_aft('init', { apiKey: '5f27c86b697062f1d52f880657faf4fd', debug: false });</script>
+    </div>
        
 </div>
 {{end}}
