--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <div class="f4 pa4">
-  <a href="https://www.kayak.com/Portland.27946.guide">Find us on Kayak!</a>
+  <a href="https://www.kayak.com/Portland.27946.guide" target="_blank">Find us on Kayak!</a>
 </div>
